CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_DEFINITIONS(-std=c++11)

PROJECT(parafem)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

# OPTIONS
OPTION(BUILD_PYTHON_BINDINGS "create python bindings" ON)

## EIGEN
find_package(Eigen3)
MESSAGE(${EIGEN3_VERSION})
INCLUDE_DIRECTORIES( ${EIGEN3_INCLUDE_DIR})     # eigen3

IF(OPENMP_FOUND)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   ${OpenMP_C_FLAGS}")
ENDIF()

ADD_SUBDIRECTORY("src/")

IF (BUILD_TESTS)
    ADD_SUBDIRECTORY("tests/")
ENDIF(BUILD_TESTS)